option java_package = "nl.tradecloud.common.protobuf";
option optimize_for = SPEED;

message UserCreatedEvt {
  optional string id = 1;
  optional string name = 2;
  optional string email = 3;
  optional string plainPassword = 4;
  repeated string roles = 5;
  optional string createdAt = 6;
}

message IdentityCreatedEvt {
  optional string email = 1;
  optional string password = 2;
  optional string salt = 3;
  repeated string roles = 4;
}